docs: restore detailed README